Adding missing APIs to README

--- a/api.erb
+++ b/api.erb
@@ -14,9 +14,9 @@ classes = [
   OpenStruct,
   Shellwords,
   # IO::Pipe,
-  # Process,
+  Process,
   # Socket,
-  # Process::Status,
+  Process::Status,
   # TCPServer,
   # TCPSocket,
   # UDPSocket
