User-space IO redirection for spawn + Open3 module

--- a/api.erb
+++ b/api.erb
@@ -12,6 +12,7 @@ classes = [
   # Kernel,
   Observable,
   OpenStruct,
+  Open3,
   Shellwords,
   # IO::Pipe,
   Process,
@@ -46,6 +47,6 @@ Instance Methods:
 <%   cls.instance_methods(false).sort.each do |meth| -%>
   - `#<%= meth %>`
 <%   end -%>
-<% end -%>
 
+<% end -%>
 <% end -%>
