--- a/api.erb
+++ b/api.erb
@@ -2,7 +2,12 @@
 classes = [
   # [Addrinfo, "Addrinfo"],
   # BasicSocket,
+  Digest::SHA1,
+  Digest::SHA256,
+  Digest::SHA512,
+  Digest::MD5,
   Dir,
+  ENV,
   File,
   # File::Stat, 
   FileTest,
